@@ -1,6 +1,6 @@
 
 R : Copyright 2005, The R Foundation for Statistical Computing
-Version 2.2.0 beta (2005-09-22 r35657)
+Version 2.2.0 beta (2005-09-27 r35689)
 ISBN 3-900051-07-0
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -26,12 +26,12 @@ Type 'q()' to quit R.
 > str(h9)
 Formal class 'dpoMatrix' [package "Matrix"] with 6 slots
   ..@ rcond   : num(0) 
-  ..@ factors : list()
   ..@ x       : num [1:81] 1.000 0.500 0.333 0.250 0.200 ...
   ..@ Dim     : int [1:2] 9 9
   ..@ Dimnames:List of 2
   .. ..$ : NULL
   .. ..$ : NULL
+  ..@ factors : list()
   ..@ uplo    : chr "U"
 > all.equal(determinant(h9)$modulus, -96.7369456, tol= 2e-8)
 [1] TRUE
@@ -51,12 +51,12 @@ Formal class 'dpoMatrix' [package "Matrix"] with 6 slots
 > str(f9 <- as(chol(h9), "dtrMatrix"))
 Formal class 'dtrMatrix' [package "Matrix"] with 7 slots
   ..@ rcond   : num(0) 
-  ..@ factors : list()
   ..@ x       : num [1:81] 1 0 0 0 0 0 0 0 0 0.5 ...
   ..@ Dim     : int [1:2] 9 9
   ..@ Dimnames:List of 2
   .. ..$ : NULL
   .. ..$ : NULL
+  ..@ factors : list()
   ..@ uplo    : chr "U"
   ..@ diag    : chr "N"
 > ## h9 now has factorization
@@ -67,22 +67,22 @@ Formal class 'dtrMatrix' [package "Matrix"] with 7 slots
 Formal class 'dpoMatrix' [package "Matrix"] with 6 slots
   ..@ rcond   : Named num 9.1e-13
   .. ..- attr(*, "names")= chr "O"
-  ..@ factors :List of 1
-  .. ..$ Cholesky:Formal class 'Cholesky' [package "Matrix"] with 7 slots
-  .. .. .. ..@ rcond   : num(0) 
-  .. .. .. ..@ factors : list()
-  .. .. .. ..@ x       : num [1:81] 1 0 0 0 0 0 0 0 0 0.5 ...
-  .. .. .. ..@ Dim     : int [1:2] 9 9
-  .. .. .. ..@ Dimnames:List of 2
-  .. .. .. .. ..$ : NULL
-  .. .. .. .. ..$ : NULL
-  .. .. .. ..@ uplo    : chr "U"
-  .. .. .. ..@ diag    : chr "N"
   ..@ x       : num [1:81] 1.000 0.500 0.333 0.250 0.200 ...
   ..@ Dim     : int [1:2] 9 9
   ..@ Dimnames:List of 2
   .. ..$ : NULL
   .. ..$ : NULL
+  ..@ factors :List of 1
+  .. ..$ Cholesky:Formal class 'Cholesky' [package "Matrix"] with 7 slots
+  .. .. .. ..@ rcond   : num(0) 
+  .. .. .. ..@ x       : num [1:81] 1 0 0 0 0 0 0 0 0 0.5 ...
+  .. .. .. ..@ Dim     : int [1:2] 9 9
+  .. .. .. ..@ Dimnames:List of 2
+  .. .. .. .. ..$ : NULL
+  .. .. .. .. ..$ : NULL
+  .. .. .. ..@ factors : list()
+  .. .. .. ..@ uplo    : chr "U"
+  .. .. .. ..@ diag    : chr "N"
   ..@ uplo    : chr "U"
 > options(digits=4)
 > (cf9 <- crossprod(f9))# looks the same as  h9 :
@@ -104,22 +104,22 @@ Formal class 'dpoMatrix' [package "Matrix"] with 6 slots
 Formal class 'dppMatrix' [package "Matrix"] with 6 slots
   ..@ rcond   : Named num 9.1e-13
   .. ..- attr(*, "names")= chr "O"
-  ..@ factors :List of 1
-  .. ..$ pCholesky:Formal class 'pCholesky' [package "Matrix"] with 7 slots
-  .. .. .. ..@ rcond   : num(0) 
-  .. .. .. ..@ factors : list()
-  .. .. .. ..@ x       : num [1:45] 1.000 0.500 0.289 0.333 0.289 ...
-  .. .. .. ..@ Dim     : int [1:2] 9 9
-  .. .. .. ..@ Dimnames:List of 2
-  .. .. .. .. ..$ : NULL
-  .. .. .. .. ..$ : NULL
-  .. .. .. ..@ uplo    : chr "U"
-  .. .. .. ..@ diag    : chr "N"
   ..@ x       : num [1:45] 1.000 0.500 0.333 0.333 0.250 ...
   ..@ Dim     : int [1:2] 9 9
   ..@ Dimnames:List of 2
   .. ..$ : NULL
   .. ..$ : NULL
+  ..@ factors :List of 1
+  .. ..$ pCholesky:Formal class 'pCholesky' [package "Matrix"] with 7 slots
+  .. .. .. ..@ rcond   : num(0) 
+  .. .. .. ..@ x       : num [1:45] 1.000 0.500 0.289 0.333 0.289 ...
+  .. .. .. ..@ Dim     : int [1:2] 9 9
+  .. .. .. ..@ Dimnames:List of 2
+  .. .. .. .. ..$ : NULL
+  .. .. .. .. ..$ : NULL
+  .. .. .. ..@ factors : list()
+  .. .. .. ..@ uplo    : chr "U"
+  .. .. .. ..@ diag    : chr "N"
   ..@ uplo    : chr "U"
 > 
 > s9 <- solve(hp9, seq(nrow(hp9)))
@@ -142,6 +142,6 @@ Formal class 'dppMatrix' [package "Matrix"] with 6 slots
 > stopifnot(all.equal(cbind(1:9), as.matrix(I9), tol = 2e-9))
 > 
 > cat('Time elapsed: ', proc.time(),'\n') # "stats"
-Time elapsed:  4.5 0.11 5.13 0 0 
+Time elapsed:  5.82 0.09 6.57 0 0 
 > 
 > 
