@@ -1,6 +1,6 @@
 
 R : Copyright 2005, The R Foundation for Statistical Computing
-Version 2.2.0 alpha (2005-09-17 r35607)
+Version 2.2.0 beta (2005-09-27 r35689)
 ISBN 3-900051-07-0
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -103,21 +103,21 @@ Type 'q()' to quit R.
 Formal class 'dgCMatrix' [package "Matrix"] with 6 slots
   ..@ i       : int [1:200] 2 6 11 21 24 29 37 38 1 4 ...
   ..@ p       : int [1:21] 0 8 22 28 37 41 50 63 71 81 ...
-  ..@ factors : list()
   ..@ Dim     : int [1:2] 40 20
   ..@ Dimnames:List of 2
   .. ..$ : NULL
   .. ..$ : NULL
+  ..@ factors : list()
   ..@ x       : num [1:200] 3 7 12 22 25 30 38 39 42 45 ...
 > str(mT <- as(m, "dgTMatrix"))
 Formal class 'dgTMatrix' [package "Matrix"] with 6 slots
   ..@ i       : int [1:200] 2 6 11 21 24 29 37 38 1 4 ...
   ..@ j       : int [1:200] 0 0 0 0 0 0 0 0 1 1 ...
-  ..@ factors : list()
   ..@ Dim     : int [1:2] 40 20
   ..@ Dimnames:List of 2
   .. ..$ : NULL
   .. ..$ : NULL
+  ..@ factors : list()
   ..@ x       : num [1:200] 3 7 12 22 25 30 38 39 42 45 ...
 > stopifnot(identical(mT, as(mC, "dgTMatrix")),
 + 	  identical(mC, as(mT, "dgCMatrix")))
